--- a/photography-world/package.json
+++ b/photography-world/package.json
@@ -14,6 +14,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-photo-view": "^1.2.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
