--- a/photography-world/package.json
+++ b/photography-world/package.json
@@ -9,12 +9,14 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "firebase": "^9.13.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-moment": "^1.1.2",
     "react-photo-view": "^1.2.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
